<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context="roome.hackathon.com.roome.Activities.AddBookActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text_gray"
            android:hint="@string/titel"
            android:inputType="text"
            android:minLines="1"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/ed_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_titel"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text_gray"
            android:hint="@string/owner"
            android:inputType="text"
            android:minLines="1"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/ed_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_owner"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text_gray"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:minLines="1"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/ed_max_tenant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_price"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text_gray"
            android:hint="@string/max_tenants"
            android:inputType="numberSigned"
            android:minLines="1"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/ed_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_max_tenant"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text_gray"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/adress"
            android:inputType="text"
            android:minLines="1"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/ed_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_adress"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text_gray"
            android:hint="@string/information"
            android:inputType="text"
            android:minLines="1"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/bu_add_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/ed_info"
            android:layout_alignRight="@id/ed_info"
            android:layout_below="@+id/ed_info"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_button_border"
            android:text="@string/add_room_pictures"
            android:textColor="#6078EA"
            android:textSize="@dimen/text_small" />

        <HorizontalScrollView
            android:id="@+id/hScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:animateLayoutChanges="true"
            android:layout_below="@id/bu_add_pictures"
            android:layoutDirection="ltr"
            android:overScrollMode="ifContentScrolls"
            android:scrollbarSize="0dp"
            android:scrollbars="horizontal"
            android:textDirection="ltr">

            <LinearLayout
                android:id="@+id/addView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:orientation="horizontal"/>
        </HorizontalScrollView>

        <Button
            android:id="@+id/bu_add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/ed_info"
            android:layout_alignRight="@id/ed_info"
            android:layout_below="@+id/hScrollView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_button_no_border"
            android:text="@string/add_room"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_title" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_alignParentTop="true"
            android:background="#6078EA"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/add_new_room"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_title"
                    android:visibility="visible" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/ic_back"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:padding="15dp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_arrow_left" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </RelativeLayout>
</ScrollView>
