<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/enter_user"
    android:scrollbars="none"
    tools:context="roome.hackathon.com.roome.Activities.LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_margin">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/alpha_height"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/roome"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_large" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_email"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginRight="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@drawable/back_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/bu_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_password"
            android:layout_margin="@dimen/txt_large"
            android:background="@drawable/back_button_login"
            android:hint="@string/login"
            android:padding="@dimen/layout_margin"
            android:textColor="@color/blue"
            android:textSize="@dimen/txt_title" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/myProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ed_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/txt_large"
            android:visibility="gone"
            app:indicatorColor="@color/white"
            app:indicatorName="BallTrianglePathIndicator" />

        <TextView
            android:id="@+id/not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bu_login"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/txt_large"
            android:layout_marginTop="@dimen/layout_margin"
            android:padding="@dimen/layout_margin"
            android:text="@string/not_have_account"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/conn_using_soci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/not_have_account"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/txt_large"
            android:padding="@dimen/layout_margin"
            android:text="@string/conn_using_soci"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/conn_using_soci"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_facebook"
                android:layout_width="@dimen/alpha_width"
                android:layout_height="@dimen/alpha_height"
                android:layout_marginRight="@dimen/layout_margin"
                android:background="@drawable/circle_shape"
                android:padding="@dimen/layout_margin"
                app:srcCompat="@drawable/ic_facebook" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ic_twitter"
                android:layout_width="@dimen/alpha_width"
                android:layout_height="@dimen/alpha_height"
                android:layout_marginLeft="@dimen/layout_margin"
                android:background="@drawable/circle_shape"
                android:padding="@dimen/layout_margin"
                app:srcCompat="@drawable/ic_twitter" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
